# ros2-robotic-manipulator-simulation

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motion_control/share/motion_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_cfg/share/moveit_cfg/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/moveit_cfg/share/moveit_cfg/cmake/: moveit_cfgConfig-version.cmake  moveit_cfgConfig.cmake
install/moveit_cfg/share/moveit_cfg/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  robotic_arm.srdf  ros2_controllers.yaml
install/robotic_arm_description/share/robotic_arm_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scene_manager/lib/scene_manager/: add_box
install/scene_manager/share/scene_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/motion_control/: CMakeLists.txt  package.xml  setup.py.bak
src/motion_control/motion_control/: move_arm.py
src/motion_control/motion_control/scripts/: spawn_box.py
src/motion_control/src/: moving.cpp
src/moveit_cfg/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_cfg/config/: joint_limits.yaml  robotic_arm.srdf  ros2_controllers.yaml
src/moveit_cfg/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robotic_arm_description/launch/: gazebo.launch.py
src/robotic_arm_description/meshes/: Gripper_L_1.stl  base_link.stl  gear_L_1.stl  gear_R_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl
src/robotic_arm_description/urdf/: robotic_arm.gazebo  robotic_arm.trans  robotic_arm.xacro  robotic_arm_moveit.xacro
src/scene_manager/: package.xml  setup.cfg  setup.py
(+18 files in other folders)
