<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description>MoveIt 2 motion control package</description>
  <maintainer email="utkarsh@todo.todo">Utkarsh</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>



<depend>rclcpp</depend>
<depend>moveit_ros_planning_interface</depend>
<depend>moveit_msgs</depend>
<depend>geometry_msgs</depend>
<depend>shape_msgs</depend>
<depend>tf2</depend>
<depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
